unpackaged/main/default/objects/AcctSeed__Time_Card__c/fields/AcctSeed__Day_Count__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Day_Count__c</fullName>
    <inlineHelpText>Number of time card days associated with this record.</inlineHelpText>
    <label>Day Count</label>
    <summarizedField>AcctSeed__Time_Card_Line__c.AcctSeed__Day_Count__c</summarizedField>
    <summaryForeignKey>AcctSeed__Time_Card_Line__c.AcctSeed__Time_Card__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>