unpackaged/main/default/objects/AcctSeed__Time_Card__c/fields/AcctSeed__Employee__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Look up to Salesforce User.</inlineHelpText>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>