unpackaged/main/default/objects/AcctSeed__Time_Card__c/fields/AcctSeed__Time_Card_Period__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Time_Card_Period__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Used for grouping of Time Card Lines. Currently only 7 day Time card periods are supported.</inlineHelpText>
    <label>Time Card Period</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>This Time Period has been Closed. Please contact your administrator to make any changes to this period.</errorMessage>
        <filterItems>
            <field>AcctSeed__Time_Card_Period__c.AcctSeed__Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Time_Card_Period__c</referenceTo>
    <relationshipLabel>Time Cards</relationshipLabel>
    <relationshipName>Time_Cards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>