unpackaged/main/default/objects/AcctSeed__Time_Card__c/fields/AcctSeed__Unbilled_Hours__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Unbilled_Hours__c</fullName>
    <formula>AcctSeed__Billable_Hours__c - AcctSeed__Billed_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount of hours which have not been billed.</inlineHelpText>
    <label>Unbilled Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>