unpackaged/main/default/objects/AcctSeed__Time_Card__c/fields/AcctSeed__Week_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Week_Ending_Date__c</fullName>
    <formula>AcctSeed__Time_Card_Period__r.AcctSeed__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The last day of the Time Card Period.</inlineHelpText>
    <label>Week Ending Date</label>
    <type>Date</type>
</CustomField>