unpackaged/main/default/objects/AcctSeed__Time_Card__c/fields/Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User__c</fullName>
    <formula>IF(   OwnerId   = $User.Id ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>