unpackaged/main/default/objects/AcctSeed__Time_Card__c/fields/RollUp_Hours__c.field-meta.xml
<CustomField>
    <fullName>RollUp_Hours__c</fullName>
    <label>RollUp Hours</label>
    <summarizedField>AcctSeed__Time_Card_Line__c.RollUp_Hours__c</summarizedField>
    <summaryForeignKey>AcctSeed__Time_Card_Line__c.AcctSeed__Time_Card__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>