unpackaged/main/default/objects/AcctSeed__Time_Card__c/listViews/AcctSeed__All1.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All1</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Time_Card_Period__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>AcctSeed__Week_Ending_Date__c</columns>
    <columns>AcctSeed__Total_Hours__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>