unpackaged/main/default/objects/AcctSeed__Time_Card__c/listViews/AcctSeed__Posted.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Posted</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Time_Card_Period__c</columns>
    <columns>AcctSeed__Week_Ending_Date__c</columns>
    <columns>AcctSeed__Employee__c</columns>
    <columns>AcctSeed__Billable_Hours__c</columns>
    <columns>AcctSeed__Billed_Hours__c</columns>
    <columns>AcctSeed__Unbilled_Hours__c</columns>
    <columns>AcctSeed__Total_Hours__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </filters>
    <label>Posted</label>
</ListView>