unpackaged/main/default/objects/AcctSeed__Time_Card__c/listViews/AcctSeed__Waiting_for_Approval.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Waiting_for_Approval</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Time_Card_Period__c</columns>
    <columns>AcctSeed__Week_Ending_Date__c</columns>
    <columns>AcctSeed__Employee__c</columns>
    <columns>AcctSeed__Total_Hours__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Waiting for Approval</value>
    </filters>
    <label>Waiting for Approval</label>
</ListView>