unpackaged/main/default/objects/AcctSeed__Time_Card__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Time_Card_Period__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Total_Hours__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Logged_In_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All - Current User</label>
    <language>en_US</language>
</ListView>