unpackaged/main/default/objects/AcctSeed__Time_Card__c/listViews/All_Current_User_Active.listView-meta.xml
<ListView>
    <fullName>All_Current_User_Active</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Time_Card_Period__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Logged_In_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Plan,In Process,Waiting for Approval</value>
    </filters>
    <label>Active - Current User</label>
    <language>en_US</language>
</ListView>