unpackaged/main/default/objects/AcctSeed__Time_Card__c/listViews/In_Process.listView-meta.xml
<ListView>
    <fullName>In_Process</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Time_Card_Period__c</columns>
    <columns>AcctSeed__Week_Ending_Date__c</columns>
    <columns>AcctSeed__Employee__c</columns>
    <columns>AcctSeed__Total_Hours__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>In Process</value>
    </filters>
    <filters>
        <field>AcctSeed__Week_Ending_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
    <language>en_US</language>
</ListView>